Fixed bug #79839

Add reference type sources in array_walk.